testsuite/tests/grammar/invalid_list/invalid-list-cls.lkt
grammar foo_grammar {
    @main_rule main_rule <- list+NoSuchGeneric[Example](Example("example"))
}
